# arclya2a

./: .env.example  .gitignore  README.md  pyproject.toml  render.yaml  requirements.txt
agent-tools/: 05356b44-f89c-4eb8-b764-7d24c3fedb7e.txt  c5b66aee-6808-4c92-8ac9-45a893e58d2b.txt
agents/: registry.json
community/: directory.json
config/: core.json  product_profile.json  states.json  tools.json
docs/: acceptable-use-policy.md  agent-onboarding.md  agent-payments.md  agent-terms.md  configuration.md  external-agent-integration.md  first-crypto-sale-runbook.md  partner-integration-guide.md  partner-outreach-value-proposition.md  partnership-model-one-pager.md  production-readiness-checklist.md  terms-of-service.md  test-partner-onboarding-checklist.md
learning/: applied_patches.jsonl  experience_store.json  learning_signals.jsonl
pricing/: agent_payment_packages.json  pricing_menu.json
prompts/: closer_prompt.md  closer_prompt_effective.md  closer_prompt_learned.md  final_arbiter.md  meta_optimizer.md  onboarding_prompt.md  outreach_worker.md  outreach_worker_learned.md  profit_guardrail.md  recruiter_prompt.md
scripts/: add_terms_to_tests.py  apply_prompt_patches.py  check_env.py  confirm_crypto_payment.py  crypto_sale_flow.py  crypto_test_payer_agent.py  demo_a2a_flow.py  graduate_partner.py  invite_agent.py  issue_sandbox_key.py  launch_ready.py  ops_dashboard.py  repair_test_syntax.py  run_first_crypto_sale.py  run_learning_cycle.py  sandbox_partner_rehearsal.py  smoke_production.py  sync_render_env.py  validate_evidence.py  verify.py
(+286 files in other folders)
