[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arclya2a"
version = "0.1.0"
description = "Constitutional agent-to-agent platform"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "httpx>=0.27",
  "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
arclya2a = "arclya2a.server.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
arclya2a = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "rehearsal: sandbox partner lifecycle rehearsal (mocked xAI, in-process HTTP)",
]